--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,8 +4,8 @@ import DarkModeToggle from "./DarkModeToggle.astro";
 ---
 
 <header>
-  <a 
-    class="unset absolute z-10 left-[50%] -top-[100rem] translate-x-[-50%] bg-white text-black px-8 py-2 focus:top-[initial]" 
+  <a
+    class="unset absolute z-10 left-[50%] -top-[100rem] translate-x-[-50%] bg-white text-black px-8 py-2 focus:top-[initial]"
     href="#main"
   >
     Skip to content
@@ -18,9 +18,7 @@ import DarkModeToggle from "./DarkModeToggle.astro";
       </ul>
     </section>
   </nav>
-  <div
-    class="justify-self-end flex items-center content-center text-text-bold"
-  >
+  <div class="justify-self-end flex items-center content-center text-text-bold">
     <DarkModeToggle />
   </div>
 </header>
