--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,11 +3,11 @@
 
 <footer class="text-sm leading-[1.75] mt-4">
   <div>
-    Este blog utiliza <a
+    This blog is powered by <a
       class="unset gradient-link tracking-wider font-bold bg-clip-text text-transparent bg-gradient-to-r from-[#00abda] to-[#1476ff] hover:after:bg-gradient-to-r hover:after:from-[#00abda] hover:after:to-[#1476ff]"
       href={"https://astro.build"}
       target="_blank"
-    >Astro</a> con el template <a
+    >Astro</a> with the <a
       class="unset gradient-link tracking-wider font-bold bg-clip-text text-transparent bg-gradient-to-r from-[#00abda] to-[#1476ff] hover:after:bg-gradient-to-r hover:after:from-[#00abda] hover:after:to-[#1476ff]"
       href={"https://github.com/flexdinesh/blogster"}
       target="_blank"
