--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -20,21 +20,21 @@
         class="unset ml-4 hover:text-text-link"
         href="https://github.com/laucha54321"
       >
-        <i class="fa-brands fa-github" aria-hidden="true" title="Laureano en GitHub"></i>
+        <i class="fa-brands fa-github" aria-hidden="true" title="Laureano on GitHub"></i>
         <span>GitHub</span>
       </a>
       <a
         class="unset ml-4 hover:text-text-link"
         href="https://www.linkedin.com/in/laureano-oliva-38294bab/"
       >
-        <i class="fa-brands fa-linkedin" aria-hidden="true" title="Laureano en LinkedIn"></i>
+        <i class="fa-brands fa-linkedin" aria-hidden="true" title="Laureano on LinkedIn"></i>
         <span>LinkedIn</span>
       </a>
     </div>
   </div>
   <div>
     <p class="mb-8">
-      Bienvenido a mi Blog!
+      Welcome to my personal website where I share my projects and thoughts.
     </p>
   </div>
 </section>
