--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import { SITE_TITLE } from "../config";
 ---
 
 <PageLayout>
-  <PageMeta title={`Blog de ${SITE_TITLE}!`} slot="meta" />
+  <PageMeta title={`${SITE_TITLE}'s blog!`} slot="meta" />
   <Fragment slot="main">
     <Intro />
   </Fragment>
