--- a/src/layouts/FontAwesome.astro
+++ b/src/layouts/FontAwesome.astro
@@ -35,8 +35,8 @@
     <link href="/fontawesome/css/fontawesome.min.css" rel="stylesheet" />
   -->
 
-  <link href="/fontawesome/css/fontawesome.css" rel="stylesheet" />
-  <link href="/fontawesome/css/brands.css" rel="stylesheet" />
+  <link href="/fontawesome/css/fontawesome.min.css" rel="stylesheet" />
+  <link href="/fontawesome/css/brands.min.css" rel="stylesheet" />
 
   <!-- 
     There's no leaner version for solid.min.css because it's already lean. 
