--- a/src/layouts/GoogleFont.astro
+++ b/src/layouts/GoogleFont.astro
@@ -64,6 +64,7 @@
       font-family: "Roboto Mono";
       font-style: normal;
       font-weight: 400;
+      font-display: swap; 
       src: local(""),
         url("/fonts/roboto-mono-v22-latin-regular.woff2") format("woff2"),
         /* Chrome 26+, Opera 23+, Firefox 39+ */
