--- a/src/layouts/ContentLayout_MathJax.astro
+++ b/src/layouts/ContentLayout_MathJax.astro
@@ -43,6 +43,23 @@ const formattedDate = new Date(date).toLocaleDateString("en-us", {
 
   <body class="max-w-3xl mx-auto min-h-screen px-6 sm:px-8">
     <Header />
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script type="text/x-mathjax-config">
+      MathJax = {
+        tex: {
+          inlineMath: [
+            ["$", "$"],
+            ["\\(", "\\)"],
+          ],
+          processEscapes: true,
+        },
+      };
+    </script>
+    <script
+      id="MathJax-script"
+      async
+      src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"
+    ></script>
     <main id="main">
       <section class="blog-post prose max-w-none prose-newspaper">
         <h1
