--- a/src/layouts/GoogleFont.astro
+++ b/src/layouts/GoogleFont.astro
@@ -71,4 +71,7 @@
         /* Chrome 26+, Opera 23+, Firefox 39+ */
     }
   </style>
+  <link rel="preload" href="/fonts/roboto-mono-v22-latin-regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+  <link rel="preload" href="/fonts/roboto-mono-v22-latin-700.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+  <link rel="preload" href="/fonts/roboto-mono-v22-latin-italic.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 </Fragment>
