--- a/src/layouts/GoogleFont.astro
+++ b/src/layouts/GoogleFont.astro
@@ -43,6 +43,7 @@
       font-family: "Roboto Mono";
       font-style: normal;
       font-weight: 400;
+      font-display: optional;
       src: local(""),
         url("/fonts/roboto-mono-v22-latin-regular.woff2") format("woff2"),
         /* Chrome 26+, Opera 23+, Firefox 39+ */
@@ -53,6 +54,7 @@
       font-family: "Roboto Mono";
       font-style: normal;
       font-weight: 700;
+      font-display: optional;
       src: local(""),
         url("/fonts/roboto-mono-v22-latin-700.woff2") format("woff2"),
         /* Chrome 26+, Opera 23+, Firefox 39+ */
@@ -63,6 +65,7 @@
       font-family: "Roboto Mono";
       font-style: italic;
       font-weight: 400;
+      font-display: optional;
       src: local(""),
         url("/fonts/roboto-mono-v22-latin-italic.woff2") format("woff2"),
         /* Chrome 26+, Opera 23+, Firefox 39+ */
