--- a/src/layouts/GoogleFont.astro
+++ b/src/layouts/GoogleFont.astro
@@ -40,35 +40,29 @@
   <style is:inline>
     /* roboto-mono-regular - latin */
     @font-face {
-      font-family: "Roboto Mono";
+      font-family: 'SF Mono', 'Cascadia Code', 'Consolas', 
+               'Liberation Mono', 'Courier New', monospace;
       font-style: normal;
       font-weight: 400;
       font-display: optional;
-      src: local(""),
-        url("/fonts/roboto-mono-v22-latin-regular.woff2") format("woff2"),
-        /* Chrome 26+, Opera 23+, Firefox 39+ */
     }
 
     /* roboto-mono-700 - latin */
     @font-face {
-      font-family: "Roboto Mono";
+      font-family: 'SF Mono', 'Cascadia Code', 'Consolas', 
+        'Liberation Mono', 'Courier New', monospace;
       font-style: normal;
       font-weight: 700;
       font-display: optional;
-      src: local(""),
-        url("/fonts/roboto-mono-v22-latin-700.woff2") format("woff2"),
-        /* Chrome 26+, Opera 23+, Firefox 39+ */
     }
 
     /* roboto-mono-italic - latin */
     @font-face {
-      font-family: "Roboto Mono";
+      font-family: 'SF Mono', 'Cascadia Code', 'Consolas', 
+               'Liberation Mono', 'Courier New', monospace;
       font-style: italic;
       font-weight: 400;
       font-display: optional;
-      src: local(""),
-        url("/fonts/roboto-mono-v22-latin-italic.woff2") format("woff2"),
-        /* Chrome 26+, Opera 23+, Firefox 39+ */
-    }
+      }
   </style>
 </Fragment>
